2003-07-16  Andrew Wu <Yang.Wu@sun.com>
	
	Fixes #45772
	
	* gui/gnome-cal.c(gnome_calendar_goto_date): implemented Alt+Left/Right
	  to go to the same day of the previous/next week.
	* gui/gnome-cal.h:add two element in GnomeCalendarGotoDateType.

2003-07-14  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #41676

	* gui/dialogs/alarm-options.c (palarm_options_changed_cb,
	  repeat_spin_button_changed_cb, repeat_unit_changed_cb): new callbacks for
	managing modifications in the 'Run a program' alarm case.
	(repeat_toggle_toggled_cb): if the alarm being edited has a procedure
	action, call palarm_options_changed_cb.
	(init_widgets): connect new callbacks.
	(alarm_to_dialog): disable 'OK' button if a procedure alarm.

2003-07-11  Federico Mena Quintero  <federico@ximian.com>

	* gui/dialogs/task-details-page.glade: Changed the "URL:" label to
	"_Web Page:".  Added a widget name to the URL label so that we can
	hook up its mnemonic by hand.  Added underlines to the "%
	Complete:" and "Date Completed:" labels.  Added a widget name to
	the date completed label, also so that we can hook up its mnemonic.

	* gui/dialogs/task-details-page.c (get_widgets): Get the url_label
	and date_completed_label as well.
	(init_widgets): Set the mnemonic widgets of the url_label and the
	date_completed_label by hand, as their respective widgets are
	not created by libglade.

	* gui/e-calendar-table.c (tasks_popup_menu): Added an item for
	"Open Web Page".
	(e_calendar_table_show_popup_menu): Disable the aforementioned
	menu item if the selected task doesn't have the URL property set.
	(open_url_cb): New callback.

	* gui/e-tasks.c (write_html): Make the HTML say "Web Page:"
	instead of "URL:".

2003-07-10  Harry Lu <harry.lu@sun.com>

	Fixes #46075.

	* gui/e-date-time-list.c (compare_datetime): new function to compare
	two CalComponentDateTime instances.
	(e_date_time_list_append): check whether the date already exists
	before adding it to the list.
